main.css
/* ... */
.landing-text h2 {
  text-align: center;
  font-style: italic;
  color: #F3EFE0;
  font-weight: normal;
  font-size: 30px;
  margin: 10px;
}

.landing-text h3 {
  color: #C3423F;
}

/* Hamburger CSS from https://jonsuh.com/hamburgers/#usage */

.hamburger {
  padding: 17.5px 10px 12.5px 10px;
  display: inline-block;
  cursor: pointer;
  transition-property: opacity, filter;
  transition-duration: 0.15s;
  transition-timing-function: linear;
  font: inherit;
  color: inherit;
  text-transform: none;
  background-color: transparent;
  border: 0;
  margin: 0;
  overflow: visible;
  position: fixed;
  top: 10px;
  left: 10px;
  z-index: 100;
  outline: none;
  background-color: #C3423F;
  border-radius: 10px;
  border: 2px solid #E29F8D;
  opacity: 0.7;
}

.hamburger:hover {
  opacity: 1;
}

.hamburger.is-active:hover {
  opacity: 1;
}

.hamburger.is-active {
  opacity: 0.7;
}

.hamburger.is-active .hamburger-inner,
.hamburger.is-active .hamburger-inner::before,
.hamburger.is-active .hamburger-inner::after {
  background-color: #EBBBAD;
}

.hamburger-box {
  width: 40px;
  height: 24px;
  display: inline-block;
  position: relative;
}

.hamburger-inner {
  display: block;
  top: 50%;
  margin-top: -2px;
}

.hamburger-inner,
.hamburger-inner::before,
.hamburger-inner::after {
  width: 40px;
  height: 4px;
  background-color: #EBBBAD;
  border-radius: 4px;
  position: absolute;
  transition-property: transform;
  transition-duration: 0.15s;
  transition-timing-function: ease;
}

.hamburger-inner::before,
.hamburger-inner::after {
  content: "";
  display: block;
}

.hamburger-inner::before {
  top: -10px;
}

.hamburger-inner::after {
  bottom: -10px;
}

.hamburger--spin .hamburger-inner {
  transition-duration: 0.22s;
  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.hamburger--spin .hamburger-inner::before {
  transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
}

.hamburger--spin .hamburger-inner::after {
  transition: bottom 0.1s 0.25s ease-in, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.hamburger--spin.is-active .hamburger-inner {
  transform: rotate(225deg);
  transition-delay: 0.12s;
  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
}

.hamburger--spin.is-active .hamburger-inner::before {
  top: 0;
  opacity: 0;
  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
}

.hamburger--spin.is-active .hamburger-inner::after {
  bottom: 0;
  transform: rotate(-90deg);
  transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.hamburger--spin-r .hamburger-inner {
  transition-duration: 0.22s;
  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.hamburger--spin-r .hamburger-inner::before {
  transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
}

.hamburger--spin-r .hamburger-inner::after {
  transition: bottom 0.1s 0.25s ease-in, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.hamburger--spin-r.is-active .hamburger-inner {
  transform: rotate(-225deg);
  transition-delay: 0.12s;
  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
}

.hamburger--spin-r.is-active .hamburger-inner::before {
  top: 0;
  opacity: 0;
  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out;
}

.hamburger--spin-r.is-active .hamburger-inner::after {
  bottom: 0;
  transform: rotate(90deg);
  transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
}

/* Sidebar from https://www.youtube.com/watch?v=YesSVqjcDts */

#sidebar {
  width: 0px;
  height: 100%;
  background: #C3423F;
  padding: 70px 0px;
  position: fixed;
  z-index: 1;
  overflow-x: hidden;
  transition: 0.5s;
  /* overflow: scroll; */
}

#sidebar.is-active {
  width: 215px;
}

#sidebar ul li {
  list-style-type: none;
  padding: 15px;
  border-bottom: 1px solid #EBBBAD;
  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
  border-top: 1px solid rgba(255, 255, 255, 0.05);
}

#sidebar ul li a {
  color: #EBBBAD;
  display: block;
  text-decoration: none;
}

#sidebar ul li a .fas {
  width: 25px;
}

#sidebar ul li:hover {
  background-color: #E29F8D;
}

#sidebar ul li:hover a {
  color: #F3EFE0;
}

#sidebar .social_media {
  position: absolute;
  /* bottom: 140px; */
  left: 50%;
  transform: translateX(-50%);
  display: flex;
}

#sidebar .social_media a {
  display: block;
  width: 40px;
  background: #E29F8D;
  height: 40px;
  line-height: 45px;
  text-align: center;
  margin: 0 5px;
  color: #F3EFE0;
  border-radius: 5px;
  transition: all .2s ease-in-out;
}

#sidebar .social_media a:hover {
  transform: scale(1.1);
}

/* from https://codepen.io/vikassingh1111/pen/xBPmbL */

.tilesWrap {
  padding: 0;
  margin: 50px auto;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  max-width: 100vw;
}

.tile {
  display: inline-block;
  width: 75%;
  padding: 30px;
  position: relative;
  vertical-align: top;
  margin: 10px;
  background: #212738;
  border-radius: 10px;
  color: #F3EFE0;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.tile h1 {
  font-size: 3em;
  color: #F3EFE0;
  margin-bottom: 10px;
  font-weight: normal;
  text-align: left;
  max-width: 80%;
  line-height: 1;
}

.tile h3 {
  text-align: left;
  margin: 0;
  color: #F3EFE0;
  font-weight: normal;
  max-width: 70%;
}

.tile h4 {
  text-align: left;
  padding-left: 20px;
  margin: 0;
  color: #F3EFE0;
  font-weight: normal;
  max-width: 70%;
}

.tile h5 {
  text-align: left;
  padding-left: 20px;
  margin-top: 0;
  color: #F3EFE0;
  font-weight: normal;
  text-transform: uppercase;
}

.tile p {
  font-size: 16px;
  line-height: 18px;
  color: #F3EFE0;
  margin-top: 5px;
  text-align: left;
}

.tile img {
  max-height: 110px;
  max-width: 110px;
  margin: 0;
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: -1;
}
/* ... */

